<?xml version="1.0"?>
<package format="2">
    <name>python_qt</name>
    <version>1.0.0</version>
    <description>python_qt</description>
    <maintainer email="name@email.com">name</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>qtbase5-dev</depend>
    <depend>qtbase5-private-dev</depend>
    <depend>qtmultimedia5-dev</depend>
    <depend>libqt5-multimedia</depend>
</package>
